--- a/style.css
+++ b/style.css
@@ -1,3 +1,27 @@
 body{
    border: 2px solid black;
+   height: 100vh;
 }
+.nav-links-wrapper{
+   }
+ 
+   .nav-wrapper{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 1rem;
+   }
+   .nav-link , span{
+text-decoration: none;
+color: black;
+font-size: large;
+margin: 2px;
+   }
+   .heading{
+      text-align: center;
+      font-size: x-large;
+      margin: 2rem 0;
+   }
+   article{
+      border-top: 2px solid black;
+   }
