--- a/style.css
+++ b/style.css
@@ -24,9 +24,31 @@ margin: 2px;
    }
    article{
       border-top: 2px solid black;
+      display: flex;
    }
+.projects{
+   display: flex;
+   flex-direction: column;
+   border-right: 1px solid black ;
+   width: 30%;
+}
+.projects > a{
+   border-top: 1px solid black;
+   text-decoration: none;
+   padding: 8px 0 0 5px;
+   color: black;
+
+}
+
+
+
+
+
+
+
    @media (max-width: 400px) {
-      .nav-wrapper{
+      .nav-wrapper , article{
          flex-direction: column;
+         align-items: center;
       }
    }
