--- a/style.css
+++ b/style.css
@@ -136,3 +136,26 @@ footer{
   color: blue;
   padding: 1rem;
 }
+.form-wrapper{
+  display: flex;
+  flex-direction: column;
+  border-top: 1px solid black;
+  padding-left: 1rem;
+
+}
+input{
+  margin-top: 1rem;
+  padding: 6px 0;
+  width: 50%;
+}
+textarea{
+  width: 50%;
+  padding: 20px 0;
+margin-top: 12px;
+}
+button{
+  padding: 0.5rem 0;
+  width: 90px;
+  margin: 1rem;
+  background-color: rgb(182, 182, 252);
+}
